--- a/style.css
+++ b/style.css
@@ -4,11 +4,27 @@
     box-sizing: border-box;
 }
 
+h1{
+    background-color: #364159;
+    border-radius: 9px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+    color: white;
+}
+
+h2{
+    background-color: #364159;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5); 
+    border-radius: 2.5px;
+    text-align: center;
+    color: white;
+}
+
 body {
     width: 80vw;
     height: 80vh;
     padding: 10px;
     margin: auto;
+    background-color: aliceblue;
 }
 
 body #title {
@@ -16,10 +32,13 @@ body #title {
 }
 
 main {
-    border: 1px solid red;
     height: 80%;
     width: 45%;
     margin: auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 2.5);
+    border-radius: 10px;
+    background-color: #e6eee5;
+  
 
 }
 
@@ -49,7 +68,6 @@ main {
 #grade-form {
     width: 100%;
     height: 80%;
-    border: 1px solid purple;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -83,9 +101,21 @@ main {
 
 #btn-submit {
     padding: 5px;
+    background-color: #364159;
+    color: white;
+    font-weight: bold;
+    border: none; 
+    border-radius: 5px; 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); 
+    cursor: pointer;
 }
 
-#result-container h2 {
-    margin-top: 2%;
+#result-container {
     text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: 150px;
+    
 }
+
+
