--- a/style.css
+++ b/style.css
@@ -114,8 +114,6 @@ main {
     text-align: center;
     font-size: 25px;
     font-weight: bold;
-    margin-top: 150px;
-    
+    padding: 20px;
 }
-
 
